# threadr

./: .bazelrc  .bazelrc.remote.example  .gitignore  BUILD.bazel  MODULE.bazel  README.md  buildbuddy.yaml  buildbuddy_setup_docker_auth.sh  go.mod  go.sum  main.go  nats.go  requirements.txt  skaffold.yaml
docker/images/: BUILD.bazel
elixir/threadr/: .dockerignore  .env.local.example  .formatter.exs  .gitignore  BUILD.bazel  Dockerfile  README.md  compose.yml  mix.exs
elixir/threadr/assets/: package-lock.json  package.json
elixir/threadr/assets/css/: app.css
elixir/threadr/assets/js/: app.js  live_socket.js
elixir/threadr/assets/js/hooks/: index.js  tenant_graph_explorer.js
elixir/threadr/assets/js/utils/: window_events.js
elixir/threadr/assets/js/wasm/: threadr_graph_exec_runtime.js
elixir/threadr/assets/wasm/threadr_graph_exec/: Cargo.toml
elixir/threadr/config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
elixir/threadr/lib/: threadr.ex  threadr_web.ex
elixir/threadr/lib/mix/tasks/: threadr.bootstrap.operator_admin.ex  threadr.embeddings.generate.ex  threadr.generation.answer.ex  threadr.generation.answer_tenant.ex  threadr.generation.complete.ex  threadr.nats.setup.ex  threadr.seed.demo.ex  threadr.smoke.bot_contract.ex  threadr.smoke.discord.ex  threadr.smoke.discord_message.ex  threadr.smoke.ingest.ex  threadr.smoke.operator.ex  threadr.tenants.migrate.ex
elixir/threadr/lib/threadr/: application.ex  compare_delta.ex  control_plane.ex  events.ex  history_request.ex  ingest.ex  mailer.ex  postgres_types.ex  release_tasks.ex  repo.ex  tenant_data.ex  time_window.ex
elixir/threadr/lib/threadr/commands/: executor.ex  noop_executor.ex
elixir/threadr/lib/threadr/control_plane/: analysis.ex  api_key.ex  bot.ex  bot_config.ex  bot_controller_contract.ex  bot_image_drift_syncer.ex  bot_operation_dispatcher.ex  bot_reconcile_operation.ex  bot_reconciler.ex  bot_status.ex  bot_status_observer.ex  kubernetes_bot_reconciler.ex  kubernetes_client.ex  kubernetes_req_client.ex  service.ex  smoke.ex  smoke_server.ex  system_llm_config.ex  tenant.ex  tenant_llm_config.ex  tenant_membership.ex  tenant_migration_dispatcher.ex  tenant_migrations.ex  to_tenant.ex  token.ex  user.ex
elixir/threadr/lib/threadr/events/: chat_context_event.ex  chat_message.ex  envelope.ex  ingest_command.ex  processing_result.ex
elixir/threadr/lib/threadr/ingest/: bot_qa.ex  supervisor.ex
elixir/threadr/lib/threadr/messaging/: pipeline.ex  publisher.ex  setup.ex  smoke.ex  supervisor.ex  topology.ex
elixir/threadr/lib/threadr/ml/: actor_qa.ex  actor_reference.ex  bot_intent.ex  channel_label.ex  constrained_qa.ex  conversation_qa.ex  conversation_qa_intent.ex  conversation_summary_qa.ex  conversation_summary_qa_intent.ex  embedding_provider_opts.ex  embeddings.ex  extraction.ex  extraction_provider_opts.ex  generation.ex  generation_provider_opts.ex  graph_rag.ex  hybrid_retriever.ex  interaction_qa.ex  interaction_qa_intent.ex  qa_intent.ex  qa_orchestrator.ex  qa_request.ex  reconstruction_query.ex  request_runtime_opts.ex  semantic_qa.ex  summary_request.ex
elixir/threadr/lib/threadr/tenant_data/: actor.ex  alias.ex  alias_observation.ex  channel.ex  command_execution.ex  context_event.ex  conversation.ex  conversation_attachment.ex  conversation_cluster_review.ex  conversation_cluster_review_dispatcher.ex  conversation_membership.ex  conversation_relationship_dispatcher.ex  conversation_relationship_recompute.ex  conversation_summarizer.ex  conversation_summary_dispatcher.ex  extracted_entity.ex  extracted_fact.ex  extraction.ex  graph.ex  graph_inspector.ex  graph_layout.ex  graph_semantics.ex  graph_snapshot.ex  history.ex  ingest.ex  live_updates.ex  message.ex  message_embedding.ex  message_link.ex  message_link_inference.ex  message_mention.ex  pending_item.ex  pending_item_tracking.ex  processing.ex  reconstruction_candidates.ex  relationship.ex  relationship_observation.ex
elixir/threadr/lib/threadr_web/: auth_controller.ex  endpoint.ex  gettext.ex  live_user_auth.ex  router.ex  telemetry.ex  user_routes.ex  user_socket.ex
elixir/threadr/lib/threadr_web/channels/: tenant_graph_channel.ex
elixir/threadr/lib/threadr_web/components/: core_components.ex  layouts.ex
elixir/threadr/lib/threadr_web/controllers/: bot_controller_contract_controller.ex  bot_status_controller.ex  error_html.ex  error_json.ex  health_controller.ex  metrics_controller.ex  page_controller.ex  page_html.ex  tenant_controller.ex
elixir/threadr/lib/threadr_web/plugs/: require_control_plane_token.ex  track_api_key_usage.ex
elixir/threadr/native/threadr_graph_nif/: Cargo.toml
elixir/threadr/native/threadr_graph_nif/src/: lib.rs
elixir/threadr/priv/repo/: seeds.exs
elixir/threadr/priv/repo/migrations/: 20260305200500_enable_threadr_extensions.exs  20260305200600_create_threadr_core_tables.exs  20260305221500_add_tenant_migration_tracking_to_tenants.exs  20260305230000_add_auth_tables.exs  20260305233000_create_bot_reconcile_operations.exs  20260305234500_add_next_attempt_at_to_bot_reconcile_operations.exs  20260306000500_add_bot_status_observation_fields.exs  20260306002000_add_bot_controller_contracts.exs  20260306003000_make_user_name_nullable.exs  20260306004000_create_tenant_llm_configs.exs  20260306006000_add_operator_admin_fields_to_users.exs  20260306007000_create_system_llm_configs.exs  20260308000100_grant_age_access_to_database_owner.exs  20260310033000_enable_pg_trgm_extension.exs
elixir/threadr/priv/repo/tenant_migrations/: .formatter.exs  20260305200700_create_tenant_graph_tables.exs  20260305213000_create_tenant_command_executions.exs  20260306011000_create_relationship_observations.exs  (+8 more)
elixir/threadr/test/: test_helper.exs
elixir/threadr/test/support/: conn_case.ex  data_case.ex  ingest_test_support.ex  ml_test_support.ex
elixir/threadr/test/threadr/: compare_delta_test.exs  history_request_test.exs  ingest_test.exs  time_window_test.exs
elixir/threadr/tools/: dev_server.sh
elixir/threadr/tools/bazel/: control_plane_image.sh  update_production_digest.sh
(+625 files in other folders)
