package(default_visibility = ["//visibility:public"])

config_setting(
    name = "release",
    values = {
        "compilation_mode": "opt",
    },
)

platform(
    name = "rbe_platform",
    constraint_values = [
        "@platforms//cpu:x86_64",
        "@platforms//os:linux",
    ],
    exec_properties = {
        "Arch": "amd64",
        "OSFamily": "Linux",
        "Pool": "default",
        "container-image": "docker://ghcr.io/carverauto/serviceradar/rbe-executor:v1.0.20",
    },
)

sh_binary(
    name = "buildbuddy_setup_docker_auth",
    srcs = ["buildbuddy_setup_docker_auth.sh"],
)

sh_binary(
    name = "buildbuddy_write_remote_rc",
    srcs = ["tools/buildbuddy/write_remote_rc.sh"],
)

alias(
    name = "push",
    actual = "//docker/images:control_plane_image_push",
)
