package(default_visibility = ["//visibility:public"])

config_setting(
    name = "release",
    values = {
        "compilation_mode": "opt",
    },
)

platform(
    name = "rbe_platform",
    constraint_values = [
        "@platforms//cpu:x86_64",
        "@platforms//os:linux",
        "@bazel_tools//tools/cpp:clang",
    ],
    exec_properties = {
        "OSFamily": "Linux",
        "dockerNetwork": "host",
        "container-image": "docker://ghcr.io/carverauto/serviceradar/rbe-executor:v1.0.21",
    },
)

alias(
    name = "push",
    actual = "//docker/images:push_all",
)
