module(
    name = "threadr",
    version = "0.1.0",
    repo_name = "threadr",
)

bazel_dep(name = "rules_oci", version = "2.2.6")
bazel_dep(name = "rules_rust", version = "0.65.0")
bazel_dep(name = "rules_erlang", version = "3.16.0")
bazel_dep(name = "rules_elixir", version = "1.1.0")
bazel_dep(name = "platforms", version = "1.0.0")

erlang_config_ext = use_extension("@rules_erlang//bzlmod:extensions.bzl", "erlang_config")
erlang_config_ext.internal_erlang_from_github_release(
    name = "otp_28_1",
    sha256 = "c7c6fe06a3bf0031187d4cb10d30e11de119b38bdba7cd277898f75d53bdb218",
    version = "28.1",
)
use_repo(erlang_config_ext, "erlang_config")

elixir_config_ext = use_extension("@rules_elixir//bzlmod:extensions.bzl", "elixir_config")
elixir_config_ext.internal_elixir_from_github_release(
    name = "elixir_1_19_4",
    sha256 = "a2df9d5411fc53d97ec17c069765c8fb781f8dc36c4e06ec1cd4b189340d364b",
    version = "1.19.4",
)
use_repo(elixir_config_ext, "elixir_config")

register_toolchains(
    "@erlang_config//otp_28_1:toolchain_major",
    "@erlang_config//otp_28_1:toolchain_major_minor",
    "@elixir_config//elixir_1_19_4:toolchain",
)

rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(
    edition = "2021",
    extra_target_triples = ["x86_64-unknown-linux-gnu"],
    rustfmt_version = "1.93.0",
    versions = ["1.93.0"],
)
use_repo(rust, "rust_toolchains")

register_toolchains("@rust_toolchains//:all")

oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")
oci.pull(
    name = "hexpm_elixir_runtime_linux_amd64",
    digest = "sha256:cdacd4041282e534b4fd6d96eabc78b24cb334d80efe56936e88f0f3d6c8eb49",
    image = "hexpm/elixir",
    platforms = ["linux/amd64"],
)
use_repo(oci, "hexpm_elixir_runtime_linux_amd64", "hexpm_elixir_runtime_linux_amd64_linux_amd64")
