load("//build:mix_release.bzl", "mix_release")

package(default_visibility = ["//visibility:public"])

filegroup(
    name = "srcs",
    srcs = glob(
        ["**"],
        exclude = [
            "bazel-*",
            "_build/**",
            "deps/**",
            "node_modules/**",
            "tmp/**",
            ".git/**",
        ],
    ),
)

filegroup(
    name = "frontend_node_modules",
    srcs = glob(
        ["assets/node_modules/**"],
        allow_empty = True,
    ),
)

mix_release(
    name = "release_tar",
    srcs = [":srcs"],
    extra_dirs = [
        "elixir/threadr/assets/node_modules",
    ],
    extra_dir_srcs = [":frontend_node_modules"],
    hex_cache = select({
        "//build:use_hex_cache": "//build:hex_cache",
        "//conditions:default": None,
    }),
    out = "threadr-release.tar.gz",
    src_dir = "elixir/threadr",
    run_assets = True,
)

alias(
    name = "control_plane_image_build",
    actual = "//docker/images:control_plane_image_amd64_tar",
)

alias(
    name = "control_plane_image_push",
    actual = "//docker/images:control_plane_image_push",
)
